--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4870,4 +4870,23 @@ ul.timeline > li:before {
 
 
 
-  
+  /* if desktop */
+  .mobile_device_380px {
+	display: none;
+}
+.mobile_device_480px {
+	display: none;
+}
+
+
+/* if mobile device max width 380px */
+@media only screen and (max-device-width: 380px) {
+	.mobile_device_380px{display: block;}       
+	.desktop {display: none;}
+} 
+
+/* if mobile device max width 480px */
+@media only screen and (max-device-width: 480px) {
+   .mobile_device_480px{display: block;}
+   .desktop {display: none;}
+}
